<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ashu Chat Demo ...</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="friends_on_map">Find your Friend on Map</string>
    <string name="exit">Exit</string>
    <string name="Description">Ashu Chat Application</string>
    <string name="connectToAppwarp">Connect to AppWarp</string>
    <string name="without_matchmaking">Without Matchmaking</string>
    <string name="with_matchmaking">With Matchmaking</string>
    <string name="get_all"></string>
    <string name="get_live_room_info">Get Live Room Info</string>
    <string name="joinRoom">Join Room</string>
    <string name="userName">User Name</string>
    <string name="chat">Chat</string>
    <string name="say">Text Message</string>
    <string name="send">Send</string>

    <string-array name="topic_arrays">
        <item>books</item>
        <item>ashok</item>
        <item>education</item>
        <item>sports</item>
        <item>science</item>
    </string-array>

    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>

</resources>