<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/beforeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:text="@string/joinRoom"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#2c3e50" />

    <Button
        android:id="@+id/chatBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/beforeView"
        android:layout_marginBottom="43dp"
        android:onClick="onChatClicked"
        android:text="@string/chat" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chatBtn"
        android:layout_alignParentLeft="true"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:text="@string/get_all"
            android:textColor="#FF0FFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/linearLayout1"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:text="@string/get_live_room_info"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/chatBtn"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/beforeView" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="312dp"
            android:layout_height="222dp" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="314dp"
                    android:layout_height="match_parent" >

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tableRow" >

                        <ImageView
                            android:id="@+id/ImageView01"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/graycircle"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:padding="10dp"
                            android:text="Subramanya"
                            android:textSize="20sp" />
                    </TableRow>
					<TableRow
                        android:id="@+id/TableRow02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/TableRow01" >

                        <ImageView
                            android:id="@+id/ImageView02"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/greencircle"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <TextView
                            android:id="@+id/onlineuser"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:onClick="onClick"
                            android:padding="10dp"
                            android:text="Sajan"
                            android:textColor="#000000"
                            android:textSize="20sp" />
                    </TableRow>
                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tableRow" >

                        <ImageView
                            android:id="@+id/ImageView01"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/graycircle"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:padding="10dp"
                            android:text="Sajan"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tableRow" >

                        <ImageView
                            android:id="@+id/ImageView01"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/graycircle"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:padding="10dp"
                            android:text="Deepak"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tableRow" >

                        <ImageView
                            android:id="@+id/ImageView01"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/graycircle"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:padding="10dp"
                            android:text="Vijay"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tableRow" >

                        <ImageView
                            android:id="@+id/ImageView01"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/graycircle"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:padding="10dp"
                            android:text="Shantanu"
                            android:textSize="20sp" />
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >
        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="186dp"
            android:layout_above="@+id/linearLayout2"
            android:layout_alignParentLeft="true" >

            <RelativeLayout
                android:layout_width="318dp"
                android:layout_height="288dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true" >

                <TableRow
                    android:id="@+id/TableRow06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true" >

                    <ImageView
                        android:id="@+id/ImageView05"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/bookicon"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:onClick="onClick1"
                        android:padding="10dp"
                        android:text="Books"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/TableRow03"
                    android:layout_marginTop="14dp" >

                    <ImageView
                        android:id="@+id/ImageView04"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/sportsicon"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:padding="10dp"
                        android:text="Sports"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/TableRow06"
                    android:layout_marginTop="22dp" >

                    <ImageView
                        android:id="@+id/ImageView03"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/graduateicon"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />

                    <TextView
                        android:id="@+id/GroupOnline"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:onClick="onClick1"
                        android:padding="10dp"
                        android:text="Graduates"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>
                
                </RelativeLayout>
        </ScrollView>

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout2"
            android:layout_marginTop="32dp"
            android:background="#0020C2" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:padding="10dp"
                android:text="Groups"
                android:textColor="#ffff"
                android:textSize="20sp" />
        </TableRow>
    </RelativeLayout>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#0020C2" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:padding="10dp"
            android:text="Friends"
            android:textColor="#ffff"
            android:textSize="20sp" />
    </TableRow>
</RelativeLayout>